Fix Wrapstodon modal scrolling not working on iOS (#37203)

--- a/app/javascript/mastodon/features/annual_report/index.module.scss
+++ b/app/javascript/mastodon/features/annual_report/index.module.scss
@@ -10,19 +10,17 @@ $mobile-breakpoint: 540px;
 }
 
 .modalWrapper {
-  position: absolute;
-  inset: 0;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   padding: 40px;
   overflow-y: auto;
-  pointer-events: none;
   scrollbar-color: var(--color-text-secondary) var(--color-bg-secondary);
 
   @media (width < $mobile-breakpoint) {
-    padding-top: 0;
-    padding-inline: 0;
+    padding: 0;
   }
 
   .loading-indicator .circular-progress {
